--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "scripts": {
     "lint": "tslint \"src/**/*.ts\" --project tsconfig.json",
     "build": "rimraf dist && tsc -p .",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "doc": "typedoc src"
   },
   "engines": {
     "node": ">=4.2.0"
@@ -72,6 +73,7 @@
     "ts-node": "^8.4.1",
     "tslint": "^5.11.0",
     "tslint-config-standard": "^8.0.1",
+    "typedoc": "^0.19.2",
     "typescript": "^3.2.4"
   },
   "peerDependencies": {
