--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,9 @@
   ],
   "exclude": [
     "src/**/*test.ts",
-  ]
+  ],
+  "typedocOptions": {
+    "mode": "modules",
+    "out": "typedoc"
+}
 }
