--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "lint": "tslint \"src/**/*.ts\" --project tsconfig.json",
     "build": "rimraf dist && tsc -p .",
     "prepare": "npm run build",
+    "dev": "ts-node-dev --respawn --transpile-only examples/index.ts",
+    "dev:debug": "ts-node-dev --inspect=9222 --respawn --transpile-only examples/index.ts",
     "doc": "typedoc src"
   },
   "engines": {
@@ -71,6 +73,7 @@
     "mocha": "^7.1.1",
     "rimraf": "^2.7.1",
     "ts-node": "^8.4.1",
+    "ts-node-dev": "^1.1.1",
     "tslint": "^5.11.0",
     "tslint-config-standard": "^8.0.1",
     "typedoc": "^0.19.2",
