Port index.ts to typescript notation and add documentation.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,17 @@
         "node_modules": true
     },
     "cSpell.words": [
-      "typedoc"
+      "CFDs",
+      "IB's",
+      "MPID",
+      "Maint",
+      "Marginable",
+      "OHLC",
+      "RESC",
+      "TWS's",
+      "intraday",
+      "timespan",
+      "typedoc",
+      "volatilities"
     ],
 }
