--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "eslint . --ext .ts",
     "test": "mocha -r ts-node/register src/**/*.spec.ts",
     "build": "rimraf dist && tsc -p .",
-    "release": "npm test && npm run doc && npm run build",
+    "release": "npm run lint && npm test && npm run doc && npm run build",
     "doc": "typedoc src --stripInternal",
     "doc:dev": "typedoc src --out ./doc-dev"
   },
