--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "scripts": {
     "lint": "eslint . --ext .ts",
-    "test": "jest -r ts-node/register src/**/*.spec.ts",
+    "test": "jest --maxWorkers=8 --reporters=default --useStderr --detectOpenHandles",
     "clean": "rm -rf dist",
     "build": "yarn clean && yarn tsc",
     "prepublishOnly": "npm run build",
@@ -72,11 +72,7 @@
     "@types/node": "^10.0.3",
     "@types/source-map-support": "^0.4.0",
     "ts-node": "^8.4.1",
-    "typedoc": "^0.19.2",
-    "typescript": "^4.1.3"
-  },
-  "peerDependencies": {
-    "typescript": ">=2.0"
+    "typedoc": "^0.19.2"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^4.10.0",
@@ -91,6 +87,7 @@
     "jest-environment-node": "^26.6.2",
     "jest-junit": "^12.0.0",
     "ts-jest": "^26.5.0",
-    "ts-lint": "^4.5.1"
+    "ts-lint": "^4.5.1",
+    "typescript": "^4.1.3"
   }
 }
