--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,15 @@
 {
   "root": true,
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"],
+  "plugins": ["@typescript-eslint", "rxjs"],
   "extends": ["plugin:@typescript-eslint/recommended"],
   "parserOptions": {
-    "ecmaVersion": 2018,
+    "ecmaVersion": 2020,
+    "project": ["tsconfig.json"],
     "sourceType": "module"
   },
   "rules": {
+    "strict": "error",
     "semi": ["error", "always"],
     "quotes": ["error", "double"],
     "@typescript-eslint/explicit-function-return-type": "off",
@@ -19,6 +21,11 @@
         "ignoreParameters": true
       }
     ],
-    "@typescript-eslint/no-unused-vars": "warn"
+    "@typescript-eslint/no-unused-vars": "warn",
+    "rxjs/no-async-subscribe": "error",
+    "rxjs/no-ignored-observable": "error",
+    "rxjs/no-ignored-subscription": "error",
+    "rxjs/no-unbound-methods": "error",
+    "rxjs/throw-error": "error"
   }
 }
