--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "doc": "typedoc --excludeInternal",
     "doc:dev": "typedoc --out ./doc-dev",
     "tsc": "./node_modules/.bin/tsc",
-    "debug": "ts-node-dev --inspect=4321 --respawn src/dev/app.ts"
+    "debug": "ts-node-dev --inspect=4321 --respawn src/dev/app-next.ts"
   },
   "engines": {
     "node": ">=4.2.0"
@@ -88,6 +88,7 @@
     "jest": "^26.6.3",
     "jest-environment-node": "^26.6.2",
     "jest-junit": "^12.0.0",
+    "rxjs": "^6.6.3",
     "ts-jest": "^26.5.0",
     "ts-lint": "^4.5.1",
     "typedoc": "^0.20.24",
