--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "allowJs": true,
     "esModuleInterop": true,
     "lib": ["es2017", "esnext", "dom", "es7"],
+	"declaration": true,
     "module": "commonjs",
     "moduleResolution": "node",
     "outDir": "./dist",
