--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "build": "yarn clean && yarn tsc",
     "prepublishOnly": "yarn build",
     "release": "yarn lint && yarn test && yarn doc && yarn build",
-    "doc": "typedoc src --stripInternal",
-    "doc:dev": "typedoc src --out ./doc-dev",
+    "doc": "typedoc --excludeInternal",
+    "doc:dev": "typedoc --out ./doc-dev",
     "tsc": "./node_modules/.bin/tsc",
     "debug": "ts-node-dev --inspect=4321 --respawn src/dev/app.ts"
   },
@@ -72,8 +72,7 @@
     "@types/lodash": "^4.14.150",
     "@types/node": "^10.0.3",
     "@types/source-map-support": "^0.4.0",
-    "ts-node-dev": "^1.1.1",
-    "typedoc": "^0.19.2"
+    "ts-node-dev": "^1.1.1"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^4.10.0",
@@ -90,6 +89,7 @@
     "jest-junit": "^12.0.0",
     "ts-jest": "^26.5.0",
     "ts-lint": "^4.5.1",
+    "typedoc": "^0.20.24",
     "typescript": "^4.1.3"
   }
 }
