--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@types/lodash": "^4.14.150",
     "@types/node": "^10.0.3",
     "@types/source-map-support": "^0.4.0",
+    "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.1"
   },
   "dependencies": {
