--- a/sample.env
+++ b/sample.env
@@ -1,4 +1,8 @@
 NODE_ENV=development
-ENV_CONFIG_TEST=ENV
+IB_TEST_PORT=4001
+LOCAL_CONFIG_TEST=local
 
-IB_TEST_PORT=7497
+VNC_PASSWORD=1234 # CHANGEME
+TRADING_MODE=paper # either paper or live
+TWSUSERID=fdemo # IB account
+TWSPASSWORD=demouser # IB account password
