--- a/sample.env
+++ b/sample.env
@@ -2,6 +2,7 @@ NODE_ENV=development
 IB_TEST_PORT=4001
 LOCAL_CONFIG_TEST=local
 
+IBG_VNC_PORT=5901
 VNC_PASSWORD=1234 # CHANGEME
 TRADING_MODE=paper # either paper or live
 TWSUSERID=fdemo # IB account
