--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,12 +53,7 @@ jobs:
 
   test_eslint:
     environment:
-      NODE_ENV: development
-    docker:
-      - image: circleci/node:12.18.4
-      - image: industrialninja/ibg_docker_tws:latest
-    working_directory: ~/repo
-    environment:
+      - NODE_ENV: development
       - TZ=America/NewYork
       # Variables pulled from /IBController/IBControllerGatewayStart.sh
       - TWS_MAJOR_VRSN=974
@@ -69,6 +64,10 @@ jobs:
       - LOG_PATH=/opt/IBController/Logs
       - JAVA_PATH=/opt/i4j_jres/1.8.0_152/bin # JRE is bundled starting with TWS 952
       - APP=GATEWAY
+    docker:
+      - image: circleci/node:12.18.4
+      - image: industrialninja/ibg_docker_tws:latest
+    working_directory: ~/repo
     steps:
       - restore_cache:
           keys:
