--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "doc": "typedoc --excludeInternal",
     "doc:dev": "typedoc --out ./doc-dev",
     "tsc": "./node_modules/.bin/tsc",
-    "debug": "ts-node-dev --inspect=4321 --respawn src/demo/inventory-logger/index.ts"
+    "debug": "ts-node-dev --inspect=4321 --respawn src/tools/market-data.ts -port=7496 -conid=3691937 -exchange=SMART -sectype=STK"
   },
   "engines": {
     "node": ">=4.2.0"
