--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -121,6 +121,14 @@ jobs:
             - source-v1-{{ .Branch }}-
             - source-v1-
       - run:
+        name: install dockerize
+        command: wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && sudo tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
+        environment:
+          DOCKERIZE_VERSION: v0.3.0
+      - run:
+        name: Wait for db
+        command: dockerize -wait tcp://localhost:4003 -timeout 1m
+      - run:
           name: Starting server
           command: yarn debug
           background: true
