--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -111,6 +111,7 @@ jobs:
           - LOG_PATH=/opt/IBController/Logs
           - JAVA_PATH=/opt/i4j_jres/1.8.0_152/bin # JRE is bundled starting with TWS 952
           - APP=GATEWAY
+          - TRADING_MODE=paper
         ports:
           - 4003:4003
     working_directory: ~/repo
@@ -126,7 +127,7 @@ jobs:
           environment:
             DOCKERIZE_VERSION: v0.3.0
       - run:
-          name: Wait for db
+          name: Wait for IBG
           command: dockerize -wait tcp://localhost:4003 -timeout 1m
       - run:
           name: Run unit tests with JUnit as reporter
@@ -189,9 +190,9 @@ workflows:
       - test_eslint:
           requires:
             - build-dependencies
-      - test_unit_parallel:
-          requires:
-            - build-dependencies
+      #- test_unit_parallel:
+      #    requires:
+      #      - build-dependencies
       #- upload-coverage:
       #    requires:
       #      - test_unit_parallel
