--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "dotenv": "^8.2.0",
     "eslint": "^7.16.0",
     "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-rxjs": "^3.1.0",
     "eventemitter3": "^4.0.7",
     "function-rate-limit": "^1.1.0",
     "jest": "^26.6.3",
