--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "test-next": "jest ./src/tests/unit/api-next/ --maxWorkers=8 --reporters=default --useStderr --detectOpenHandles",
     "clean": "rm -rf dist",
     "build": "yarn clean && yarn tsc",
+    "build:watch": "yarn tsc --watch",
     "prepublishOnly": "yarn build",
     "release": "yarn lint && yarn test && yarn doc && yarn build",
     "doc": "typedoc --excludeInternal",
     "doc:dev": "typedoc --out ./doc-dev",
-    "tsc": "./node_modules/.bin/tsc",
-    "debug": "ts-node-dev --inspect=4321 --respawn src/tools/account-summary.ts -port=4002 -watch -log=debug"
+    "tsc": "./node_modules/.bin/tsc"
   },
   "engines": {
     "node": ">=4.2.0"
@@ -72,9 +72,7 @@
     "@types/jest": "^26.0.20",
     "@types/lodash": "^4.14.150",
     "@types/node": "^10.0.3",
-    "@types/source-map-support": "^0.4.0",
-    "ts-node": "^9.1.1",
-    "ts-node-dev": "^1.1.1"
+    "@types/source-map-support": "^0.4.0"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^4.10.0",
