--- a/package.json
+++ b/package.json
@@ -72,25 +72,25 @@
     "@types/jest": "^26.0.20",
     "@types/lodash": "^4.14.150",
     "@types/node": "^10.0.3",
-    "@types/source-map-support": "^0.4.0"
-  },
-  "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.10.0",
-    "@typescript-eslint/parser": "^4.10.0",
-    "ajv": "^7.0.4",
-    "command-buffer": "^0.1.0",
-    "dotenv": "^8.2.0",
-    "eslint": "^7.16.0",
-    "eslint-plugin-jest": "^24.1.3",
-    "eslint-plugin-rxjs": "^3.1.0",
-    "eventemitter3": "^4.0.7",
-    "function-rate-limit": "^1.1.0",
+    "@types/source-map-support": "^0.4.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "ajv": "^8.1.0",
+    "eslint": "^7.24.0",
+    "eslint-plugin-jest": "^24.3.5",
+    "eslint-plugin-rxjs": "^3.1.5",
     "jest": "^26.6.3",
     "jest-environment-node": "^26.6.2",
     "jest-junit": "^12.0.0",
-    "rxjs": "^6.6.3",
-    "ts-jest": "^26.5.0",
-    "typedoc": "^0.20.24",
-    "typescript": "^4.1.3"
+    "ts-jest": "^26.5.5",
+    "typedoc": "^0.20.35",
+    "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "command-buffer": "^0.1.0",
+    "dotenv": "^8.2.0",
+    "eventemitter3": "^4.0.7",
+    "function-rate-limit": "^1.1.0",
+    "rxjs": "^6.6.3"
   }
 }
