IBApiNext: Add support for getting historic data (add getHistoricalData and getHistoricalDataUpdates)
Tweak connection watchdog (increase timeout value and double request frequency to avoid connection drops during outside trading hours, like e.g. on weekends if TWS behaves 'laggy' on request handling).

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -186,5 +186,50 @@
         "!**/node_modules/**"
       ]
     },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Tool: historical-data",
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
+      "runtimeArgs": [
+        "--trace-warnings"
+      ],
+      "program": "${workspaceFolder}/dist/tools/historical-data.js",
+      "args": [
+        "-conid=3691937",
+        "-exchange=SMART",
+        "-duration=3 M",
+        "-barSize=1 day"
+      ],
+      "outputCapture": "std",
+      "resolveSourceMapLocations": [
+        "${workspaceFolder}/**",
+        "!**/node_modules/**"
+      ]
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Tool: historical-data-updates",
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
+      "runtimeArgs": [
+        "--trace-warnings"
+      ],
+      "program": "${workspaceFolder}/dist/tools/historical-data-updates.js",
+      "args": [
+        "-conid=3691937",
+        "-exchange=SMART",
+        "-barSize=15 mins"
+      ],
+      "outputCapture": "std",
+      "resolveSourceMapLocations": [
+        "${workspaceFolder}/**",
+        "!**/node_modules/**"
+      ]
+    },
   ]
 }
