--- a/sample.env
+++ b/sample.env
@@ -1,9 +1,9 @@
 NODE_ENV=development
-IB_TEST_PORT=4001
+ENV_CONFIG_TEST=ENV
 LOCAL_CONFIG_TEST=local
 
-IBG_VNC_PORT=5901
-VNC_PASSWORD=1234 # CHANGEME
+
+IB_PORT=4002
 TRADING_MODE=paper # either paper or live
-TWSUSERID=fdemo # IB account
-TWSPASSWORD=demouser # IB account password
+TWS_USERID=fdemo # IB account
+TWS_PASSWORD=demouser # IB account password
