--- a/sample.env
+++ b/sample.env
@@ -4,6 +4,8 @@ LOCAL_CONFIG_TEST=local
 
 
 IB_PORT=4002
+#IB_HOST=tws # for local testing
+
 TRADING_MODE=paper # either paper or live
 TWS_USERID=fdemo # IB account
 TWS_PASSWORD=demouser # IB account password
