--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -413,6 +413,35 @@
         "--trace-warnings"
       ],
       "program": "${workspaceFolder}/dist/tools/place-new-order.js",
+      "args": [
+        "-price=125",
+        "-symbol=AAPL",
+        "-quantity=10",
+        "-clientId=0",
+      ],
+      "outputCapture": "std",
+      "resolveSourceMapLocations": [
+        "${workspaceFolder}/**",
+        "!**/node_modules/**"
+      ]
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Tool: modify-order (!!DANGER!!)",
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
+      "runtimeArgs": [
+        "--trace-warnings"
+      ],
+      "program": "${workspaceFolder}/dist/tools/modify-order.js",
+      "args": [
+        "-price=115",
+        "-quantity=12",
+        "-clientId=0",
+        "-orderId=2",
+      ],
       "outputCapture": "std",
       "resolveSourceMapLocations": [
         "${workspaceFolder}/**",
