--- a/sample.env
+++ b/sample.env
@@ -2,7 +2,7 @@ NODE_ENV=development
 ENV_CONFIG_TEST=ENV
 LOCAL_CONFIG_TEST=local
 
-
+IB_TEST_ACCOUNT=ENV
 IB_PORT=4002
 #IB_HOST=tws # for local testing
 
