Add support for searching contracts via IBApiNext (#130)
* Add support for IBApiNext.searchContracts

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -509,6 +509,26 @@
         "${workspaceFolder}/**",
         "!**/node_modules/**"
       ]
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Tool: search-contracts",
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
+      "runtimeArgs": [
+        "--trace-warnings"
+      ],
+      "program": "${workspaceFolder}/dist/tools/search-contracts.js",
+      "args": [
+        "-pattern=Apple",
+      ],
+      "outputCapture": "std",
+      "resolveSourceMapLocations": [
+        "${workspaceFolder}/**",
+        "!**/node_modules/**"
+      ]
     }
   ]
 }
