--- a/.eslintignore
+++ b/.eslintignore
@@ -3,4 +3,6 @@ node_modules
 # don't lint build output (make sure it's set to your correct build folder name)
 dist
 # don't lint test code
-**/*.spec.ts
+\*_/_.spec.ts
+# the following files don't need linting
+jest.config.js
